@@ -1,5 +1,7 @@
 from urllib import unquote
 
+from AccessControl import Unauthorized
+from Acquisition import aq_base
 from Acquisition import aq_inner
 from Products.Five import BrowserView
 from Products.Five.browser.pagetemplatefile import ZopeTwoPageTemplateFile
@@ -374,7 +376,7 @@ class Plone(BrowserView):
         """
         if self.request.get(manager_name, None):
             return False
-        
+
         context = aq_inner(self.context)
         if view is None:
             view = self
@@ -388,6 +390,16 @@ class Plone(BrowserView):
 
     def site_encoding(self):
         return utils.getSiteEncoding(self.context)
+
+    def renderBase(self):
+        context = aq_inner(self.context)
+        # when accessing via WEBDAV you're not allowed to access aq_base
+        try:
+            if getattr(aq_base(context), 'isPrincipiaFolderish', False):
+                return context.absolute_url() + '/'
+        except Unauthorized:
+            pass
+        return context.absolute_url()
 
     def bodyClass(self, template, view):
         if isinstance(template, ZopeTwoPageTemplateFile):
